--- a/Example/Podfile
+++ b/Example/Podfile
@@ -1,8 +1,8 @@
 use_frameworks!
-
+source 'https://github.com/CocoaPods/Specs.git'
 target 'BWWebImageView_Example' do
   pod 'BWWebImageView', :path => '../'
-
+  pod 'Kingfisher', :
   target 'BWWebImageView_Tests' do
     inherit! :search_paths
 
